force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/leaseworks__Aircraft_Data_Mining__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_2012 Aircraft Analytics</label>
    <nameField>
        <label>Z_Unused_2012 Aircraft Data Mining Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2012 Aircraft Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>