force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Matches_Found__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Matches_Found__c</fullName>
    <label>_Matches Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>