force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Matches_Found_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Matches_Found_F__c</fullName>
    <formula>leaseworks__Matches_Found__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matches Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>