force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Min_Current_Market_Lease_Rate_mm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Min_Current_Market_Lease_Rate_mm__c</fullName>
    <label>_Min Current Market Lease Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>