force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Min_Cycles_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Min_Cycles_Cumulative__c</fullName>
    <label>_Min Cycles Cumulative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>