force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Min_Seat_Total__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Min_Seat_Total__c</fullName>
    <label>_Min Seat Total</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>