force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Min_Seat_Total_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Min_Seat_Total_F__c</fullName>
    <formula>leaseworks__Min_Seat_Total__c</formula>
    <label>Min Seat Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>