force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Usage_Other__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Usage_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This includes Combi / Mixed (Passenger/Cargo), Freight / Cargo, Quick-Change/Convertible (Passenger/Cargo).</description>
    <inlineHelpText>This includes Combi / Mixed (Passenger/Cargo), Freight / Cargo, Quick-Change/Convertible (Passenger/Cargo).</inlineHelpText>
    <label>Cargo/Combi Aircraft</label>
    <type>Checkbox</type>
</CustomField>