force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/fields/leaseworks__Usage_Passenger__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Usage_Passenger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Passenger Aircraft</label>
    <type>Checkbox</type>
</CustomField>