force-app/main/default/objects/leaseworks__Aircraft_Data_Mining__c/validationRules/leaseworks__ValidateYOMFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ValidateYOMFrom</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK(leaseworks__From_Year_of_manufacture__c),
OR(LEN(leaseworks__From_Year_of_manufacture__c)!=4 , !ISNUMBER(leaseworks__From_Year_of_manufacture__c) ,  VALUE(leaseworks__From_Year_of_manufacture__c) &lt;1970 )
 )</errorConditionFormula>
    <errorDisplayField>leaseworks__From_Year_of_manufacture__c</errorDisplayField>
    <errorMessage>Either enter a valid format of Year (YYYY) or it should be greater than 1970.</errorMessage>
</ValidationRule>